--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <style>
     :root {
-      --ripe-olive: #4f5b44;
-      --clary-sage: #a8b79a;
-      --alabaster: #f3eee4;
-      --accessible-beige: #d1c3ac;
-      --bg: var(--alabaster);
-      --card-bg: #fdfcf8;
-      --accent: var(--ripe-olive);
-      --accent-soft: rgba(79, 91, 68, 0.08);
-      --text: #2b3527;
-      --muted: #6d7662;
-      --border: rgba(90, 103, 83, 0.22);
-      --border-strong: rgba(79, 91, 68, 0.35);
+      --deep-olive: #435339;
+      --sage: #9eb589;
+      --linen: #ede4d2;
+      --sand: #cdbb99;
+      --bg: var(--linen);
+      --card-bg: #fbf5e8;
+      --accent: #314427;
+      --accent-light: rgba(67, 83, 57, 0.16);
+      --text: #21311d;
+      --muted: #6f7762;
+      --border: rgba(67, 83, 57, 0.28);
+      --border-strong: rgba(67, 83, 57, 0.42);
       --radius-lg: 8px;
       --radius-md: 6px;
       --radius-sm: 4px;
@@ -43,7 +43,7 @@
 
     #sidebar {
       width: 260px;
-      background: #f8f4eb;
+      background: #f5ecda;
       border-right: 1px solid var(--border);
       padding: 28px 20px;
       display: flex;
@@ -73,7 +73,7 @@
       padding: 10px 14px;
       border-radius: var(--radius-sm);
       border: 1px solid transparent;
-      background: rgba(79, 91, 68, 0.12);
+      background: var(--accent-light);
       color: var(--accent);
       font-weight: 600;
       cursor: pointer;
@@ -82,18 +82,59 @@
 
     .sidebar-action:hover {
       transform: translateY(-1px);
-      background: rgba(79, 91, 68, 0.18);
+      background: rgba(67, 83, 57, 0.22);
     }
 
     .sidebar-action.active {
-      background: rgba(79, 91, 68, 0.24);
-      border-color: rgba(79, 91, 68, 0.38);
+      background: rgba(67, 83, 57, 0.3);
+      border-color: rgba(67, 83, 57, 0.5);
     }
 
     #tagList {
       display: flex;
       flex-direction: column;
       gap: 8px;
+    }
+
+    .album-list {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    .album-link {
+      appearance: none;
+      border: none;
+      background: transparent;
+      color: var(--text);
+      font-size: 0.95rem;
+      font-weight: 600;
+      padding: 10px 12px;
+      border-radius: var(--radius-sm);
+      text-align: left;
+      cursor: pointer;
+      transition: background 0.2s ease, color 0.2s ease;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .album-link:hover {
+      background: rgba(67, 83, 57, 0.16);
+    }
+
+    .album-link.active {
+      background: rgba(67, 83, 57, 0.22);
+      color: var(--accent);
+    }
+
+    .album-link .label {
+      flex: 1;
+    }
+
+    .album-link .count {
+      font-size: 0.78rem;
+      color: var(--muted);
     }
 
     .tag-filter {
@@ -111,12 +152,12 @@
     }
 
     .tag-filter:hover {
-      background: rgba(79, 91, 68, 0.12);
+      background: rgba(67, 83, 57, 0.16);
     }
 
     .tag-filter.active {
-      background: rgba(79, 91, 68, 0.16);
-      border-color: rgba(79, 91, 68, 0.4);
+      background: rgba(67, 83, 57, 0.2);
+      border-color: rgba(67, 83, 57, 0.45);
       color: var(--accent);
       font-weight: 600;
     }
@@ -134,8 +175,42 @@
       justify-content: space-between;
       align-items: flex-end;
       gap: 16px;
-      border-bottom: 1px solid rgba(90, 103, 83, 0.18);
-      background: linear-gradient(180deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0.75) 100%);
+      border-bottom: 1px solid rgba(67, 83, 57, 0.2);
+      background: linear-gradient(180deg, rgba(255,255,255,0.96) 0%, rgba(251,245,232,0.78) 100%);
+    }
+
+    .header-left {
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+
+    .back-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      color: var(--accent);
+      font-weight: 600;
+      font-size: 0.95rem;
+      text-decoration: none;
+      width: fit-content;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease, transform 0.2s ease;
+    }
+
+    .back-link::before {
+      content: '←';
+      font-size: 1rem;
+    }
+
+    .back-link.visible {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    .back-link:hover {
+      transform: translateX(-2px);
     }
 
     #contentHeader h2 {
@@ -161,8 +236,8 @@
       gap: 6px;
       padding: 9px 14px;
       border-radius: var(--radius-sm);
-      border: 1px solid rgba(90, 103, 83, 0.3);
-      background: rgba(249, 246, 240, 0.8);
+      border: 1px solid rgba(67, 83, 57, 0.32);
+      background: rgba(252, 244, 229, 0.85);
       color: var(--text);
       font-weight: 500;
       cursor: pointer;
@@ -170,7 +245,7 @@
     }
 
     .button-link:hover {
-      background: rgba(79, 91, 68, 0.12);
+      background: rgba(67, 83, 57, 0.18);
       transform: translateY(-1px);
     }
 
@@ -181,6 +256,7 @@
       padding: 28px 36px 40px;
       display: grid;
       gap: 28px;
+      align-items: start;
     }
 
     .album-grid {
@@ -195,7 +271,7 @@
       position: relative;
       border: 1px solid var(--border-strong);
       border-radius: var(--radius-lg);
-      background: #f4f1e7;
+      background: #efe3ca;
       overflow: hidden;
       cursor: pointer;
       transition: transform 0.2s ease, border-color 0.2s ease;
@@ -214,12 +290,12 @@
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
       gap: 3px;
-      background: #dfe6d4;
+      background: #d4dbc6;
     }
 
     .album-thumb {
       position: relative;
-      background: rgba(79, 91, 68, 0.18);
+      background: rgba(67, 83, 57, 0.22);
       overflow: hidden;
       display: flex;
       align-items: center;
@@ -238,7 +314,7 @@
     }
 
     .album-thumb.placeholder {
-      background: rgba(79, 91, 68, 0.24);
+      background: rgba(67, 83, 57, 0.28);
     }
 
     .album-overlay {
@@ -247,7 +323,7 @@
       right: 0;
       bottom: 0;
       padding: 18px 20px;
-      background: linear-gradient(180deg, rgba(29, 37, 27, 0) 0%, rgba(29, 37, 27, 0.72) 60%, rgba(29, 37, 27, 0.92) 100%);
+      background: linear-gradient(180deg, rgba(23, 30, 22, 0) 0%, rgba(23, 30, 22, 0.7) 60%, rgba(23, 30, 22, 0.95) 100%);
       color: #fdfcf8;
       display: flex;
       flex-direction: column;
@@ -283,7 +359,7 @@
     }
 
     .photo-card {
-      background: #f4f1e7;
+      background: #f0e6d1;
       border-radius: var(--radius-md);
       border: 1px solid var(--border-strong);
       overflow: hidden;
@@ -301,7 +377,7 @@
       position: relative;
       aspect-ratio: 4 / 3;
       overflow: hidden;
-      background: rgba(177, 188, 167, 0.32);
+      background: rgba(150, 168, 139, 0.32);
       cursor: pointer;
     }
 
@@ -363,7 +439,7 @@
     .tag-chip {
       appearance: none;
       border: none;
-      background: rgba(79, 91, 68, 0.22);
+      background: rgba(67, 83, 57, 0.26);
       color: var(--accent);
       padding: 5px 12px;
       border-radius: 999px;
@@ -397,7 +473,7 @@
     .lightbox-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(34, 44, 32, 0.85);
+      background: rgba(23, 30, 22, 0.88);
       display: none;
       align-items: center;
       justify-content: center;
@@ -429,14 +505,14 @@
     }
 
     .lightbox-close {
-      position: absolute;
-      top: -20px;
-      right: -20px;
-      width: 56px;
-      height: 56px;
+      position: fixed;
+      top: 28px;
+      right: 32px;
+      width: 60px;
+      height: 60px;
       border-radius: 50%;
       border: none;
-      background: rgba(46, 58, 44, 0.85);
+      background: rgba(23, 30, 22, 0.72);
       color: #f5f2ea;
       font-size: 28px;
       cursor: pointer;
@@ -447,7 +523,7 @@
     }
 
     .lightbox-close:hover {
-      background: rgba(46, 58, 44, 0.95);
+      background: rgba(23, 30, 22, 0.9);
       transform: translateY(-2px);
     }
 
@@ -464,7 +540,7 @@
     }
 
     .lightbox-info {
-      background: rgba(34, 44, 32, 0.88);
+      background: rgba(23, 30, 22, 0.86);
       padding: 20px 26px;
       border-radius: var(--radius-lg);
       color: #f5f2ea;
@@ -492,10 +568,10 @@
     }
 
     .lightbox-nav {
-      position: absolute;
+      position: fixed;
       top: 50%;
-      left: 12px;
-      right: 12px;
+      left: 32px;
+      right: 32px;
       display: flex;
       justify-content: space-between;
       transform: translateY(-50%);
@@ -504,20 +580,20 @@
 
     .lightbox-btn {
       pointer-events: auto;
-      width: 72px;
-      height: 72px;
+      width: 76px;
+      height: 76px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      background: rgba(46, 58, 44, 0.6);
-      border: 1px solid rgba(245, 242, 234, 0.35);
+      background: rgba(23, 30, 22, 0.6);
+      border: 1px solid rgba(245, 242, 234, 0.4);
       cursor: pointer;
       transition: background 0.2s ease, transform 0.2s ease;
     }
 
     .lightbox-btn:hover {
-      background: rgba(46, 58, 44, 0.75);
+      background: rgba(23, 30, 22, 0.82);
       transform: translateY(-2px);
     }
 
@@ -552,8 +628,8 @@
       }
 
       .lightbox-nav {
-        left: 6px;
-        right: 6px;
+        left: 12px;
+        right: 12px;
       }
 
       .lightbox-btn {
@@ -569,8 +645,8 @@
       .lightbox-close {
         width: 48px;
         height: 48px;
-        top: -16px;
-        right: -16px;
+        top: 20px;
+        right: 20px;
       }
     }
   </style>
@@ -583,7 +659,7 @@
       </div>
       <div>
         <div class="sidebar-subtitle">Browse</div>
-        <button id="allAlbumsBtn" class="sidebar-action" type="button">Albums overview</button>
+        <nav id="albumList" class="album-list"></nav>
       </div>
       <div>
         <div class="sidebar-subtitle">Tags</div>
@@ -592,11 +668,13 @@
     </aside>
     <main id="content">
       <div id="contentHeader">
-        <div>
-          <h2 id="viewTitle">Albums</h2>
-          <p id="viewSubtitle">Overview of all albums</p>
+        <div class="header-left">
+          <a id="backLink" class="back-link" href="#">Back to albums list</a>
+          <div>
+            <h2 id="viewTitle">Albums</h2>
+            <p id="viewSubtitle">Overview of all albums</p>
+          </div>
         </div>
-        <div class="header-actions" id="headerActions"></div>
       </div>
       <section id="albumsView" class="album-grid"></section>
       <section id="imagesView" class="image-grid hidden"></section>
@@ -639,12 +717,12 @@
     let albumViews = loadAlbumViews();
 
     const sidebarTagList = document.getElementById('tagList');
-    const allAlbumsBtn = document.getElementById('allAlbumsBtn');
+    const albumListEl = document.getElementById('albumList');
     const albumsView = document.getElementById('albumsView');
     const imagesView = document.getElementById('imagesView');
     const viewTitle = document.getElementById('viewTitle');
     const viewSubtitle = document.getElementById('viewSubtitle');
-    const headerActions = document.getElementById('headerActions');
+    const backLink = document.getElementById('backLink');
 
     const lightbox = document.getElementById('lightbox');
     const lightboxImg = document.getElementById('lightboxImg');
@@ -756,11 +834,56 @@
       updateActiveFilters();
     }
 
+    function renderAlbumList() {
+      albumListEl.innerHTML = '';
+      const totalPhotos = albums.reduce((sum, album) => sum + album.items.length, 0);
+
+      const overviewBtn = createAlbumLink('all', 'All albums', formatCount(totalPhotos, 'photo', 'photos'));
+      overviewBtn.addEventListener('click', () => showAlbums(true));
+      albumListEl.appendChild(overviewBtn);
+
+      albums.forEach((album) => {
+        const btn = createAlbumLink(album.id, album.name, formatCount(album.items.length, 'photo', 'photos'));
+        btn.addEventListener('click', () => showAlbum(album.id, true));
+        albumListEl.appendChild(btn);
+      });
+
+      updateActiveFilters();
+    }
+
+    function createAlbumLink(id, label, countText) {
+      const btn = document.createElement('button');
+      btn.type = 'button';
+      btn.className = 'album-link';
+      btn.dataset.album = id;
+
+      const labelSpan = document.createElement('span');
+      labelSpan.className = 'label';
+      labelSpan.textContent = label;
+
+      const countSpan = document.createElement('span');
+      countSpan.className = 'count';
+      countSpan.textContent = countText;
+
+      btn.append(labelSpan, countSpan);
+      return btn;
+    }
+
+    function setBackLinkVisible(visible) {
+      backLink.classList.toggle('visible', visible);
+    }
+
     function updateActiveFilters() {
       document.querySelectorAll('.tag-filter').forEach((btn) => {
         btn.classList.toggle('active', currentContext.type === 'tag' && btn.dataset.tag === currentContext.value);
       });
-      allAlbumsBtn.classList.toggle('active', currentContext.type === 'albums');
+      const activeAlbumId = currentContext.type === 'album' ? currentContext.value : null;
+      const highlightAll = currentContext.type === 'albums';
+      document.querySelectorAll('.album-link').forEach((btn) => {
+        const datasetId = btn.dataset.album;
+        const isActive = (highlightAll && datasetId === 'all') || (!!activeAlbumId && datasetId === activeAlbumId);
+        btn.classList.toggle('active', isActive);
+      });
     }
 
     function renderAlbums() {
@@ -891,7 +1014,7 @@
       currentContext = { type: 'albums', value: null };
       viewTitle.textContent = 'Albums';
       viewSubtitle.textContent = 'Overview of all albums';
-      headerActions.innerHTML = '';
+      setBackLinkVisible(false);
       albumsView.classList.remove('hidden');
       imagesView.classList.add('hidden');
       renderAlbums();
@@ -912,14 +1035,7 @@
       const totalViews = incrementAlbumView(albumId);
       viewTitle.textContent = album.name;
       viewSubtitle.textContent = `${formatCount(album.items.length, 'photo', 'photos')} | ${formatCount(totalViews, 'view', 'views')}`;
-
-      headerActions.innerHTML = '';
-      const backBtn = document.createElement('button');
-      backBtn.type = 'button';
-      backBtn.className = 'button-link';
-      backBtn.textContent = 'Back to albums';
-      backBtn.addEventListener('click', () => showAlbums(true));
-      headerActions.appendChild(backBtn);
+      setBackLinkVisible(true);
 
       albumsView.classList.add('hidden');
       imagesView.classList.remove('hidden');
@@ -942,14 +1058,7 @@
 
       viewTitle.textContent = label;
       viewSubtitle.textContent = `${formatCount(items.length, 'photo', 'photos')} with this tag`;
-
-      headerActions.innerHTML = '';
-      const clearBtn = document.createElement('button');
-      clearBtn.type = 'button';
-      clearBtn.className = 'button-link';
-      clearBtn.textContent = 'Back to albums';
-      clearBtn.addEventListener('click', () => showAlbums(true));
-      headerActions.appendChild(clearBtn);
+      setBackLinkVisible(true);
 
       albumsView.classList.add('hidden');
       imagesView.classList.remove('hidden');
@@ -1098,7 +1207,10 @@
     }
 
     function initialiseSidebar() {
-      allAlbumsBtn.addEventListener('click', () => showAlbums(true));
+      backLink.addEventListener('click', (event) => {
+        event.preventDefault();
+        showAlbums(true);
+      });
     }
 
     function initialiseGallery(data) {
@@ -1119,6 +1231,7 @@
       const allItems = albums.flatMap((album) => album.items);
       buildTagIndex(allItems);
       renderTagList();
+      renderAlbumList();
 
       const { view, value } = parseHash();
       if (view === 'album' && value) {
