--- a/public/index.html
+++ b/public/index.html
@@ -46,17 +46,43 @@
       width: 260px;
       background: #f5ecda;
       border-right: 1px solid var(--border);
-      padding: 28px 20px;
+      padding: 24px 20px 28px;
       display: flex;
       flex-direction: column;
       gap: 24px;
       overflow-y: auto;
     }
 
-    .sidebar-title {
-      font-size: 1.4rem;
-      font-weight: 700;
-      margin: 0;
+    .sidebar-profile {
+      display: flex;
+      gap: 14px;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+
+    .sidebar-profile img {
+      width: 72px;
+      height: 72px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 8px 16px rgba(33, 49, 29, 0.2);
+    }
+
+    .sidebar-name {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .sidebar-name strong {
+      font-size: 1.15rem;
+      color: var(--accent);
+      letter-spacing: 0.02em;
+    }
+
+    .sidebar-name span {
+      font-size: 0.85rem;
+      color: var(--muted);
     }
 
     .sidebar-subtitle {
@@ -65,30 +91,6 @@
       text-transform: uppercase;
       color: var(--muted);
       margin-bottom: 12px;
-    }
-
-    .sidebar-action {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      padding: 10px 14px;
-      border-radius: var(--radius-sm);
-      border: 1px solid transparent;
-      background: var(--accent-light);
-      color: var(--accent);
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.2s ease, transform 0.2s ease;
-    }
-
-    .sidebar-action:hover {
-      transform: translateY(-1px);
-      background: rgba(67, 83, 57, 0.22);
-    }
-
-    .sidebar-action.active {
-      background: rgba(67, 83, 57, 0.3);
-      border-color: rgba(67, 83, 57, 0.5);
     }
 
     #tagList {
@@ -133,9 +135,10 @@
       flex: 1;
     }
 
-    .album-link .count {
-      font-size: 0.78rem;
-      color: var(--muted);
+    .album-link.root {
+      font-size: 1.05rem;
+      font-weight: 700;
+      color: var(--accent);
     }
 
     .tag-filter {
@@ -172,9 +175,9 @@
 
     .profile-hero {
       display: flex;
-      align-items: center;
-      gap: 24px;
-      padding: 28px 36px 18px;
+      flex-direction: column;
+      gap: 6px;
+      padding: 28px 36px 20px;
       background: linear-gradient(135deg, rgba(67, 83, 57, 0.08) 0%, rgba(205, 187, 153, 0.2) 100%);
       border-bottom: 1px solid rgba(67, 83, 57, 0.18);
     }
@@ -185,11 +188,9 @@
       border-radius: 50%;
       overflow: hidden;
       border: 3px solid rgba(67, 83, 57, 0.35);
-      flex-shrink: 0;
       box-shadow: 0 10px 24px rgba(33, 49, 29, 0.2);
     }
 
-    .profile-avatar picture,
     .profile-avatar img {
       width: 100%;
       height: 100%;
@@ -197,15 +198,9 @@
       display: block;
     }
 
-    .profile-copy {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-    }
-
     .profile-copy h1 {
       margin: 0;
-      font-size: 1.8rem;
+      font-size: 1.9rem;
       font-weight: 700;
       color: var(--accent);
     }
@@ -213,25 +208,7 @@
     .profile-copy p {
       margin: 0;
       color: var(--muted);
-      font-size: 0.98rem;
-    }
-
-    .profile-mark {
-      margin-left: auto;
-      width: 78px;
-      height: 78px;
-      opacity: 0.9;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .profile-mark picture,
-    .profile-mark img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      display: block;
+      font-size: 1rem;
     }
 
     #contentHeader {
@@ -331,22 +308,22 @@
       flex: 1;
       overflow-y: auto;
       padding: 24px 36px 32px;
-      column-count: 4;
-      column-gap: 16px;
+      column-width: 220px;
+      column-gap: 14px;
     }
 
     @media (max-width: 1280px) {
       .image-grid {
-        column-count: 3;
-        column-gap: 14px;
+        column-width: 200px;
+        column-gap: 12px;
       }
     }
 
     @media (max-width: 900px) {
       .image-grid {
-        column-count: 2;
-        column-gap: 14px;
         padding: 24px;
+        column-width: 190px;
+        column-gap: 12px;
       }
     }
 
@@ -368,10 +345,7 @@
 
     .album-previews {
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 82px;
+      inset: 0;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
@@ -409,8 +383,8 @@
       left: 0;
       right: 0;
       bottom: 0;
-      padding: 18px 20px;
-      background: linear-gradient(180deg, rgba(23, 30, 22, 0) 0%, rgba(23, 30, 22, 0.7) 60%, rgba(23, 30, 22, 0.95) 100%);
+      padding: 18px 20px 16px;
+      background: linear-gradient(180deg, rgba(23, 30, 22, 0.1) 0%, rgba(23, 30, 22, 0.85) 100%);
       color: #fdfcf8;
       display: flex;
       flex-direction: column;
@@ -723,8 +697,12 @@
 <body>
   <div id="app">
     <aside id="sidebar">
-      <div>
-        <h1 class="sidebar-title">Card Gallery</h1>
+      <div class="sidebar-profile">
+        <img src="assets/img/amarantha-avatar.svg" alt="amarantha profile photo">
+        <div class="sidebar-name">
+          <strong>amarantha</strong>
+          <span>postcrossing collector</span>
+        </div>
       </div>
       <div>
         <div class="sidebar-subtitle">Browse</div>
@@ -738,20 +716,14 @@
     <main id="content">
       <section class="profile-hero">
         <div class="profile-avatar">
-          <picture>
-            <source srcset="assets/img/amarantha-avatar.jpg" type="image/jpeg">
-            <img src="assets/img/amarantha-avatar.svg" alt="Portrait of amarantha with her dog">
-          </picture>
+          <img src="assets/img/amarantha-avatar.svg" alt="Portrait of amarantha with her dog">
         </div>
         <div class="profile-copy">
           <h1>amarantha&rsquo;s albums for swap</h1>
-          <p>Hand-picked postcard sets ready for fellow collectors and mail art friends.</p>
+          <p>A living collection of postcards ready to travel.</p>
         </div>
         <div class="profile-mark">
-          <picture>
-            <source srcset="assets/img/amarantha-logo.png" type="image/png">
-            <img src="assets/img/amarantha-logo.svg" alt="amarantha wordmark">
-          </picture>
+          <img src="assets/img/amarantha-logo.svg" alt="amarantha wordmark">
         </div>
       </section>
       <div id="contentHeader">
@@ -802,6 +774,9 @@
     let ignoreHashChange = false;
     const ALBUM_VIEWS_KEY = 'cardgallery_album_views';
     let albumViews = loadAlbumViews();
+    const ALBUM_ORDER = [
+      // Example: 'postcards/collection-01', 'Art'
+    ];
 
     const sidebarTagList = document.getElementById('tagList');
     const albumListEl = document.getElementById('albumList');
@@ -851,6 +826,23 @@
       return `${value} ${word}`;
     }
 
+    function createAlbumOrderLookup() {
+      const lookup = new Map();
+      ALBUM_ORDER.forEach((entry, index) => {
+        if (typeof entry !== 'string') return;
+        lookup.set(entry.toLowerCase(), index);
+      });
+      return lookup;
+    }
+
+    function getAlbumOrderIndex(lookup, album) {
+      const byId = lookup.get(album.id.toLowerCase());
+      if (byId !== undefined) return byId;
+      const byName = lookup.get(album.name.toLowerCase());
+      if (byName !== undefined) return byName;
+      return Number.MAX_SAFE_INTEGER;
+    }
+
     function inferAlbumName(folder) {
       if (!folder) return 'Album';
       const parts = folder.split('/');
@@ -868,8 +860,9 @@
     }
 
     function normalizeItem(raw, folder) {
-      const title = raw.title?.trim() || inferTitle(raw.public_id || '');
-      const description = raw.description?.trim() || '';
+      const metadata = raw.context?.custom || {};
+      const title = metadata.name?.trim() || raw.title?.trim() || inferTitle(raw.public_id || '');
+      const description = metadata.desc?.trim() || raw.description?.trim() || '';
       const tags = Array.isArray(raw.tags) ? raw.tags : [];
       return {
         ...raw,
@@ -923,19 +916,13 @@
 
     function renderAlbumList() {
       albumListEl.innerHTML = '';
-      const totalPhotos = albums.reduce((sum, album) => sum + album.items.length, 0);
-      const overviewBtn = createAlbumLink(
-        'all',
-        'All albums',
-        `${formatCount(albums.length, 'album', 'albums')} · ${formatCount(totalPhotos, 'photo', 'photos')}`
-      );
+      const overviewBtn = createAlbumLink('all', 'All albums');
+      overviewBtn.classList.add('root');
       overviewBtn.addEventListener('click', () => showAlbums(true));
       albumListEl.appendChild(overviewBtn);
 
       albums.forEach((album) => {
-        const photoCount = formatCount(album.items.length, 'photo', 'photos');
-        const viewCount = formatCount(getAlbumViews(album.id), 'view', 'views');
-        const btn = createAlbumLink(album.id, album.name, `${photoCount} · ${viewCount}`);
+        const btn = createAlbumLink(album.id, album.name);
         btn.addEventListener('click', () => showAlbum(album.id, true));
         albumListEl.appendChild(btn);
       });
@@ -943,7 +930,7 @@
       updateActiveFilters();
     }
 
-    function createAlbumLink(id, label, countText) {
+    function createAlbumLink(id, label) {
       const btn = document.createElement('button');
       btn.type = 'button';
       btn.className = 'album-link';
@@ -953,11 +940,7 @@
       labelSpan.className = 'label';
       labelSpan.textContent = label;
 
-      const countSpan = document.createElement('span');
-      countSpan.className = 'count';
-      countSpan.textContent = countText;
-
-      btn.append(labelSpan, countSpan);
+      btn.append(labelSpan);
       return btn;
     }
 
@@ -1045,7 +1028,7 @@
         figure.className = 'mosaic-item';
 
         const img = document.createElement('img');
-        img.src = item.url;
+        img.src = transformCloudinaryUrl(item.url, 820);
         img.alt = item.title || item.public_id;
         img.loading = 'lazy';
         figure.appendChild(img);
@@ -1188,19 +1171,23 @@
       else showAlbums();
     });
 
-    function transformUrlForPreview(url) {
+    function transformCloudinaryUrl(url, width) {
       try {
         const marker = '/upload/';
         const idx = url.indexOf(marker);
         if (idx !== -1) {
           const prefix = url.substring(0, idx + marker.length);
           const suffix = url.substring(idx + marker.length);
-          return prefix + 'c_limit,f_auto,q_auto,w_1600/' + suffix;
+          return `${prefix}c_limit,f_auto,q_auto,w_${width}/${suffix}`;
         }
       } catch (err) {
         console.warn('Failed to transform URL', err);
       }
       return url;
+    }
+
+    function transformUrlForPreview(url) {
+      return transformCloudinaryUrl(url, 1200);
     }
 
     function renderLightbox(idx) {
@@ -1293,6 +1280,7 @@
     function initialiseGallery(data) {
       const folders = data.folders || {};
       const albumEntries = Object.keys(folders);
+      const orderLookup = createAlbumOrderLookup();
       albums = albumEntries
         .map((folder) => {
           const items = (folders[folder] || []).map((item) => normalizeItem(item, folder));
@@ -1303,7 +1291,11 @@
           };
         })
         .filter((album) => album.items.length > 0)
-        .sort((a, b) => a.name.localeCompare(b.name, undefined, { sensitivity: 'base' }));
+        .sort((a, b) => {
+          const diff = getAlbumOrderIndex(orderLookup, a) - getAlbumOrderIndex(orderLookup, b);
+          if (diff !== 0) return diff;
+          return a.name.localeCompare(b.name, undefined, { sensitivity: 'base' });
+        });
 
       const allItems = albums.flatMap((album) => album.items);
       buildTagIndex(allItems);
